--- a/algorithms/Graph-Context-Aware/IS-UserBased-Graph-movielens2.ipynb
+++ b/algorithms/Graph-Context-Aware/IS-UserBased-Graph-movielens2.ipynb
@@ -36,7 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "full_data = pd.read_csv('context_ratings_sorted.csv', sep=';')\n",
+    "full_data = pd.read_csv('../../data/ml100kC/context_ratings_sorted.csv', sep=';')\n",
     "\n",
     "kf = KFold(n_splits = 10, shuffle = True, random_state = 2)\n",
     "result = next(kf.split(full_data), None)\n",
@@ -123,8 +123,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2500 of 90752, time: 0.644 minutes, remaining: 22.750 minutes\n",
       "5000 of 90752, time: 1.272 minutes, remaining: 21.810 minutes\n",
@@ -361,13 +361,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,8 +380,6 @@
     "        score = 0.0\n",
     "        number_of_hits = 0.0\n",
     "\n",
-    "        \n",
-    "\n",
     "        for count, element in enumerate(topk_dict[key]):\n",
     "            if element in relevant_items:\n",
     "                number_of_hits += 1\n",
@@ -402,10 +393,7 @@
     "        else:\n",
     "            average_precisions.append(score / k_val)\n",
     "    \n",
-    "    return (1 / len(test_userIds) * sum(average_precisions))\n",
-    "        \n",
-    "\n",
-    "\n"
+    "    return (1 / len(test_userIds) * sum(average_precisions))"
    ]
   },
   {
@@ -417,8 +405,8 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "| Neighbors | L | RMSE | K | MAP@K |\n",
       "|-----------|---|------|---|-------|\n",
@@ -488,14 +476,12 @@
     "\n",
     "        print(f'| {neighbor_value} | {L} | {rmse:.3f} | mapk | {k_val}')\n",
     "        progress = 1\n",
-    "        start_time = time.time()\n",
-    "    #print(f'k: {10, neighbors: {neighbor_value}, context: {disable_context}, L: {L}')\n",
-    "    #print(f'RMSE: {rmse}')\n",
-    "    #print(f'Hits: {hits}, misses: {misses}, errors: {errors}, zero recs: {zero_recs}')\n",
-    "    #print('-----------------------')\n"
+    "        start_time = time.time()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Results\n",
     "\n",
@@ -524,9 +510,7 @@
     "\n",
     "# Missing:\n",
     "U1: L4, N20"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -558,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
